2006-07-26 Carlos Nieves Onega <cnieves@iespana.es>

	* src/g_hook.c: Added pointer check. Fixes gschem crash when 
	adding an attribute while some other attributes were selected.
	Thanks to Levente Kovacs for reporting the bug and testing the patch.

2006-07-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_window.c: Added pointer check to be pro-active.  Related to
	(Bugs#1528080)

2006-07-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_color.c: Added a missing extern keyword on colors structure

        * include/defines.h: Applied mouse pan patch by Peter Clifton.
        (Patch #1527361): Allow middle button panning in gschem
	Thanks for the patch Peter!

	* include/i_vars.h, include/prototype.h, lib/system-gschemrc.in,
	src/g_rc.c, src/g_register.c, src/i_vars.c, src/x_event.c:
	Applied mouse gain patch by Peter Clifton.  Added (mousepan-gain #)
	rc option to control this gain (default is still 5).
	(Patch #1527363): Set mousepan "gain" to unity
	Thanks for the patch Peter!

2006-07-23  Mike Jarabek  <mjarabek@istop.com>

	* examples/drawing_primitives.sch: Removed extra line from text in
	drawing primitives.

2006-07-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/POTFILES.in: Updated files to get rid of old noweb references.

	* po/*.po, po/gschem.pot: Updated files to take into account above
	changes (via make dist).

	* src/rcstrings.c, src/Makefile.am, po/POTFILES.in: Oops forgot
	about this file (thanks Werner); added file back and updated po
	files via make dist again.

2006-07-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/x_log.h, src/g_hook.c, src/g_keys.c, src/g_rc.c, 
	src/gschem.c, src/i_basic.c, src/i_callbacks.c, src/o_complex.c,
	src/o_misc.c, src/o_net.c, src/o_picture.c, src/o_slot.c, 
	src/o_text.c, src/o_undo.c, src/x_attribedit.c, src/x_color.c,
	src/x_dialog.c, src/x_fileselect.c, src/x_grid.c, src/x_image.c,
	src/x_menus.c, src/x_pagesel.c, src/x_print.c, src/x_stroke.c,